force-app/main/default/objects/Account/fields/abc__c.field-meta.xml
<CustomField>
    <fullName>abc__c</fullName>
    <label>abc</label>
    <summarizedField>Opportunity.NumberOfOppLineUp__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>