force-app/main/default/objects/Account/fields/Test1_Ant1__c.field-meta.xml
<CustomField>
    <fullName>Test1_Ant1__c</fullName>
    <label>Test Ant</label>
    <length>10</length>
    <type>Text</type>
</CustomField>