force-app/main/default/objects/Account/fields/Test_Ant__c.field-meta.xml
<CustomField>
    <fullName>Test_Ant__c</fullName>
    <label>Test Ant</label>
    <length>10</length>
    <type>Text</type>
</CustomField>