force-app/main/default/objects/Account/validationRules/AnnualRevenueCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>AnnualRevenueCheck</fullName>
    <active>false</active>
    <description>Whenever Record Is Created/Edited And Owner Of Account IS Public,AnnualREvenue Filed SHouldn&apos;t Be Empty And Greater Than 0</description>
    <errorConditionFormula>IF(  ISPICKVAL(Ownership, &apos;Public&apos;)  ,  ISNULL( AnnualRevenue ),false )</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Annual Revenue Shouldnot Be Null And Greater Than 0</errorMessage>
</ValidationRule>