force-app/main/default/objects/Account/validationRules/Restrict_Active_Field_Edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Active_Field_Edit</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISCHANGED( Active__c ), $Profile.Name =&apos;System Administrator&apos; )</errorConditionFormula>
    <errorDisplayField>Active__c</errorDisplayField>
    <errorMessage>Cannot Edit This Field As System Admin</errorMessage>
</ValidationRule>